# framework

./: BUILD.bazel  cache.json
.gitea/workflows/: check.yml
ccsrc/DistributedIR/: dividegraph.cpp
ccsrc/DistributedIR/include/DistributedIR/: block.hpp  dividegraph.hpp  edge.hpp  graph.hpp  input.hpp  node.hpp  tensor.hpp
ccsrc/DistributedIR/python/: CMakeLists.txt  graph.cc
ccsrc/adapters/tensorflow/pass/: placement_pass.cc
ccsrc/policy/: CMakeLists.txt
ccsrc/policy/include/policy/aware/: aware_interface.h
docs/dev/: build.md
examples/: .resnet50.py.swp  cache.json  datasets.py  mnist.py
python/framework/adapters/jax/: block2jaxpr.py
python/framework/aware/: progressive_placer.py
tests/ut/: CMakeLists.txt  test_DistributedIR.cc
